menu footer align fix

--- a/Petstaurant/wwwroot/css/menu.css
+++ b/Petstaurant/wwwroot/css/menu.css
@@ -9,9 +9,9 @@
 
 }
 
-.row > div[class*='col-lg-'] {
-  display: flex;
-  flex:1 0 auto;
+.row > div[class*='col-lg-3'] {
+    display: flex;
+    flex: 1 0 auto;
 }
 
 .card-title{
